tests/parser/should_pass/multiple_includes.csp
include "include_2.csp"
include "include_3.csp"

P = 2

Q = 4


S = P + Q + R
