tests/parser/should_fail/split_exp_1.csp
P = f(x) + 
include "split_exp_2.csp"
